# TDotDat

./: .dockerignore  .editorconfig  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  convert_omas.py  docker-compose.full.yml  docker-compose.yml  docker-services.yml  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  upload_run.py
.github/workflows/: tests.yml
.tx/: config
docker/: build-images.sh  wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
scripts/: bootstrap  console  server  setup  update
tdotdat/: __init__.py  config.py  version.py
tdotdat/deposit/: api.py  forms.py  views.py
tdotdat/deposit/templates/deposit/: create.html
tdotdat/equilibrium/: __init__.py  api.py  config.py  ext.py  fetchers.py  forms.py  indexer.py  minters.py  providers.py  tasks.py  views.py  webpack.py
tdotdat/equilibrium/assets/semantic-ui/js/tdotdat_equilibrium/: index.js  search_app_customizations.js
tdotdat/equilibrium/jsonschemas/equilibrium/: equilibrium-v1.0.0.json
tdotdat/equilibrium/loaders/: __init__.py
tdotdat/equilibrium/mappings/os-v2/equilibrium/: equilibrium-v1.0.0.json
tdotdat/equilibrium/mappings/v7/equilibrium/: equilibrium-v1.0.0.json
tdotdat/equilibrium/marshmallow/: __init__.py  json.py
tdotdat/equilibrium/serializers/: __init__.py
tdotdat/equilibrium/templates/semantic-ui/equilibrium/: create.html  record.html  search.html  success.html
tdotdat/records/: __init__.py  api.py  config.py  ext.py  forms.py  indexer.py  jsonresolvers.py  permissions.py  tasks.py  views.py  webpack.py
tdotdat/records/assets/semantic-ui/js/tdotdat_records/: display_selected_files.js  index.js  search_app_customizations.js
tdotdat/records/assets/semantic-ui/js/tdotdat_records/deposit/: EquilibriumSelection.js  index.js
tdotdat/records/assets/semantic-ui/js/tdotdat_records/plot/: index.js
tdotdat/records/jsonschemas/: __init__.py
tdotdat/records/jsonschemas/records/: record-v1.0.0.json
tdotdat/records/loaders/: __init__.py
tdotdat/records/mappings/: __init__.py
tdotdat/records/mappings/os-v2/: __init__.py
tdotdat/records/mappings/os-v2/records/: record-v1.0.0.json
tdotdat/records/mappings/v7/: __init__.py
tdotdat/records/mappings/v7/records/: record-v1.0.0.json
tdotdat/records/marshmallow/: __init__.py  json.py
tdotdat/records/serializers/: __init__.py
tdotdat/records/templates/bootstrap3/records/: record.html
tdotdat/records/templates/semantic-ui/records/: compare.html  create.html  plot.html  record.html  reference.html  search.html  success.html
tdotdat/theme/: __init__.py  views.py  webpack.py
tdotdat/theme/assets/bootstrap3/scss/tdotdat/: theme.scss  variables.scss
tdotdat/theme/assets/semantic-ui/js/tdotdat/: previewer.js
tdotdat/theme/assets/semantic-ui/less/tdotdat/: theme.config
tdotdat/theme/assets/semantic-ui/less/tdotdat/site/globals/: site.overrides  site.variables
tdotdat/theme/assets/semantic-ui/templates/search/: ResultsGrid.item.jsx  ResultsList.item.jsx
tdotdat/theme/templates/bootstrap3/tdotdat/: frontpage.html
tdotdat/theme/templates/semantic-ui/tdotdat/: frontpage.html  header.html
tests/: conftest.py  test_version.py
tests/api/: conftest.py  test_api_record_files.py
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: conftest.py
