# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 TDoTP.
#
# TDotDat is free software; you can redistribute it and/or modify it under
# the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = tdotdat
description = Gyrokinetic EM turbulence database
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = tdotdat Invenio
license = MIT
author = Peter Hill
author_email = peter.hill@york.ac.uk
url = https://github.com/PlasmaFAIR/tdotdat
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 3 - Alpha

[options]
packages = tdotdat
include_package_data = True
zip_safe = False
install_requires =
    invenio[base, auth, metadata, files, postgresql, elasticsearch7 ] >= 3.5.0a4
    lxml >=4.3.0,<5.0.0
    marshmallow >=3.0.0,<4.0.0
    uwsgi >=2.0
    uwsgi-tools >=1.1.1
    uwsgitop >=0.11

[options.extras_require]
tests =
    pytest-invenio >= 1.4.1,<1.5.0
docs =
    sphinx >=3.0.0,<4

[options.entry_points]
console_scripts =
    tdotdat = invenio_app.cli:cli
invenio_base.apps =
    tdotdat_records = tdotdat.records:TDotDat
invenio_base.blueprints =
    tdotdat = tdotdat.theme.views:blueprint
    tdotdat_records = tdotdat.records.views:blueprint
invenio_assets.webpack =
    tdotdat_theme = tdotdat.theme.webpack:theme
    tdotdat_search_app = tdotdat.records.webpack:search_app
invenio_config.module =
    tdotdat = tdotdat.config
invenio_i18n.translations =
    messages = tdotdat
invenio_base.api_apps =
    tdotdat = tdotdat.records:TDotDat
invenio_jsonschemas.schemas =
    tdotdat = tdotdat.records.jsonschemas
invenio_search.mappings =
    records = tdotdat.records.mappings

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = tdotdat/translations/

[extract_messages]
copyright_holder = TDoTP
msgid_bugs_address = peter.hill@york.ac.uk
mapping-file = babel.ini
output-file = tdotdat/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = tdotdat/translations/messages.pot
output-dir = tdotdat/translations/

[update_catalog]
input-file = tdotdat/translations/messages.pot
output-dir = tdotdat/translations/
