# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 TDoTP.
#
# TDotDat is free software; you can redistribute it and/or modify it under
# the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = tdotdat
description = Gyrokinetic EM turbulence database
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = tdotdat Invenio
license = MIT
author = Peter Hill
author_email = peter.hill@york.ac.uk
url = https://github.com/PlasmaFAIR/tdotdat
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 3 - Alpha

[options]
packages = tdotdat
include_package_data = True
zip_safe = False
install_requires =
    invenio[auth, metadata, files, postgresql, elasticsearch7 ] >= 3.5.0a4
    invenio-admin >= 1.3.2,<1.4.0
    invenio-assets >= 1.3.0,<1.4.0
    invenio-formatter >= 1.1.3,<1.2.0
    invenio-logging >= 1.3.0,<1.4.0
    invenio-mail >= 1.0.2,<1.1.0
    invenio-rest >= 1.2.8,<1.3.0
    invenio-theme >= 1.3.17,<1.4.0
    lxml >=4.3.0,<5.0.0
    marshmallow >=3.0.0,<4.0.0
    uwsgi >=2.0
    uwsgi-tools >=1.1.1
    uwsgitop >=0.11
    pyrokinetics

# The following are installed for invenio-app-rdm, but missing from this package (or different versions)
# invenio-accounts            2.0.0   (this: 1.4.13)
# invenio-app-rdm             9.0.4
# invenio-communities         2.8.3
# invenio-drafts-resources    0.16.5
# invenio-oauthclient         2.0.0   (this: 1.5.4)
# invenio-rdm-records         0.35.19
# invenio-records             1.7.3   (this: 1.6.2)
# invenio-records-permissions 0.13.0
# invenio-records-resources   0.19.17
# invenio-requests            0.3.27
# invenio-search-ui           2.1.1   (this: 2.0.10)
# invenio-users-resources     0.1.11
# invenio-vocabularies        0.11.6


[options.extras_require]
tests =
    pytest-invenio >= 1.4.1,<1.5.0
docs =
    sphinx >=4.0.0,<5

[options.entry_points]
console_scripts =
    tdotdat = invenio_app.cli:cli
invenio_base.apps =
    tdotdat_records = tdotdat.records:TDotDat
    tdotdat_equilibrium = tdotdat.equilibrium:Equilibrium
invenio_base.blueprints =
    tdotdat = tdotdat.theme.views:blueprint
    tdotdat_records = tdotdat.records.views:blueprint
    tdotdat_equilibrium = tdotdat.equilibrium.views:blueprint
invenio_base.converters =
    int_list = tdotdat.records.views:IntListConverter
invenio_assets.webpack =
    tdotdat_theme = tdotdat.theme.webpack:theme
    tdotdat_search_app = tdotdat.records.webpack:search_app
    tdotdat_equilibrium_search_app = tdotdat.equilibrium.webpack:search_app
invenio_config.module =
    tdotdat = tdotdat.config
invenio_i18n.translations =
    messages = tdotdat
invenio_base.api_apps =
    tdotdat = tdotdat.records:TDotDat
    equilibrium = tdotdat.equilibrium:Equilibrium
invenio_jsonschemas.schemas =
    tdotdat = tdotdat.records.jsonschemas
    equilibrium = tdotdat.equilibrium.jsonschemas
invenio_search.mappings =
    records = tdotdat.records.mappings
    equilibrium = tdotdat.equilibrium.mappings
invenio_pidstore.fetchers =
    equid = tdotdat.equilibrium.fetchers:equilibrium_pid_fetcher
invenio_pidstore.minters =
    equid = tdotdat.equilibrium.minters:equilibrium_pid_minter
invenio_records.jsonresolver =
    equilibrium = tdotdat.records.jsonresolvers

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = tdotdat/translations/

[extract_messages]
copyright_holder = TDoTP
msgid_bugs_address = peter.hill@york.ac.uk
mapping-file = babel.ini
output-file = tdotdat/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = tdotdat/translations/messages.pot
output-dir = tdotdat/translations/

[update_catalog]
input-file = tdotdat/translations/messages.pot
output-dir = tdotdat/translations/
